[tool.poetry]
name = "farglot"
version = "0.1.0"
description = ""
authors = ["michaelhly <michaelhly@gmail.com>"]
license = "MIT"
packages = [
    { include = "examples" },
    { include = "farglot", from = "src" },
    { include = "farcaster", from = "scripts" },
]

[tool.poetry.dependencies]
python = ">=3.9, <3.11"
transformers = "^4.31.0"
torch = "^2.0.1"

[tool.poetry.dev-dependencies]
PyNaCl = "^1.5.0"
eth-account = "^0.9.0"
blake3 = "^0.3.3"
protobuf = "4.22.1"
datasets = "^2.14.3"
numpy = "^1.24.3"
xformers = "^0.0.20"
requests = "^2.31.0"
urllib3 = "1.26.6"
grpcio = "1.53.0"
grpcio-tools = "1.53.0"
faust-streaming-rocksdb = "^0.9.2"
wandb = "^0.15.8"
scikit-learn = "^1.3.0"
ipykernel = "^6.25.1"
black = {version = "^23.7.0", allow-prereleases = true}

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
