[tool.poetry]
name = "farglot"
version = "0.1.0"
description = ""
authors = ["michaelhly <michaelhly@gmail.com>"]
license = "MIT"
packages = [
    { include = "examples" },
    { include = "farglot", from = "src" }
]

[tool.poetry.dependencies]
python = ">=3.9, <3.11"
datasets = "^2.14.3"
transformers = "^4.31.0"
torch = "^2.0.1"
typer = {extras = ["all"], version = "^0.9.0", optional = true}
PyNaCl = {version = "^1.5.0", optional = true}
eth-account = {version = "^0.9.0", optional = true}
blake3 = {version = "^0.3.3", optional = true}
protobuf = {version = "4.22.1", optional = true}
faust-streaming-rocksdb = {version = "^0.9.2", optional = true}
grpcio = {version = "1.53.0", optional = true}

[tool.poetry.extras]
cli = [
    "blake3",
    "typer",
    "grpcio",
    "protobuf",
    "PyNaCl,
    "faust-streaming-rocksdb"
]

[tool.poetry.dev-dependencies]
numpy = "^1.24.3"
xformers = "^0.0.20"
requests = "^2.31.0"
urllib3 = "1.26.6"
grpcio-tools = "1.53.0"
wandb = "^0.15.8"
scikit-learn = "^1.3.0"
ipykernel = "^6.25.1"
black = {version = "^23.7.0", allow-prereleases = true}

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
